[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Several puzzle games."
authors = ["Vadim Gusak <gusakvd@gmail.com>"]
packages = [
  {include = "brain_games"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Natural Language :: Russian",
  "Programming Language :: Python :: 3.10",
  "Topic :: Games/Entertainment :: Puzzle Games"
]
repository = "https://github.com/vadim-gusak/python-project-lvl1.git"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
